@@ -7,6 +7,7 @@ latd
 latcp
 log
 llogin
+moprc
 BUILD
 RPMS
 rpmbuild
