@@ -1,2 +1,1 @@
 Allow files as stdin for TSM-like functionality
-man page
